dark mode fixes

--- a/layouts/header/style.css
+++ b/layouts/header/style.css
@@ -16,6 +16,7 @@
     --new-tweet-over: rgba(255, 255, 255, 0.92);
     --input-background: white;
     --active-message: #eaf5fd;
+    --more-color: #30F;
 }
 @font-face {
     font-family: 'RosettaIcons';
